; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/devfs/extr_devfs_rule.c_devfs_ruleset_apply.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/devfs/extr_devfs_rule.c_devfs_ruleset_apply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devfs_mount = type { i64, i32 }
%struct.devfs_ruleset = type { i32 }

@SX_XLOCKED = common dso_local global i32 0, align 4
@sx_rules = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @devfs_ruleset_apply(%struct.devfs_mount* %0) #0 {
  %2 = alloca %struct.devfs_mount*, align 8
  %3 = alloca %struct.devfs_ruleset*, align 8
  store %struct.devfs_mount* %0, %struct.devfs_mount** %2, align 8
  %4 = load %struct.devfs_mount*, %struct.devfs_mount** %2, align 8
  %5 = getelementptr inbounds %struct.devfs_mount, %struct.devfs_mount* %4, i32 0, i32 1
  %6 = load i32, i32* @SX_XLOCKED, align 4
  %7 = call i32 @sx_assert(i32* %5, i32 %6)
  %8 = call i32 @sx_xlock(i32* @sx_rules)
  %9 = load %struct.devfs_mount*, %struct.devfs_mount** %2, align 8
  %10 = getelementptr inbounds %struct.devfs_mount, %struct.devfs_mount* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = call i32 @sx_xunlock(i32* @sx_rules)
  br label %28

15:                                               ; preds = %1
  %16 = load %struct.devfs_mount*, %struct.devfs_mount** %2, align 8
  %17 = getelementptr inbounds %struct.devfs_mount, %struct.devfs_mount* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call %struct.devfs_ruleset* @devfs_ruleset_bynum(i64 %18)
  store %struct.devfs_ruleset* %19, %struct.devfs_ruleset** %3, align 8
  %20 = load %struct.devfs_ruleset*, %struct.devfs_ruleset** %3, align 8
  %21 = icmp ne %struct.devfs_ruleset* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %15
  %23 = load %struct.devfs_ruleset*, %struct.devfs_ruleset** %3, align 8
  %24 = load %struct.devfs_mount*, %struct.devfs_mount** %2, align 8
  %25 = call i32 @devfs_ruleset_applydm(%struct.devfs_ruleset* %23, %struct.devfs_mount* %24)
  br label %26

26:                                               ; preds = %22, %15
  %27 = call i32 @sx_xunlock(i32* @sx_rules)
  br label %28

28:                                               ; preds = %26, %13
  ret void
}

declare dso_local i32 @sx_assert(i32*, i32) #1

declare dso_local i32 @sx_xlock(i32*) #1

declare dso_local i32 @sx_xunlock(i32*) #1

declare dso_local %struct.devfs_ruleset* @devfs_ruleset_bynum(i64) #1

declare dso_local i32 @devfs_ruleset_applydm(%struct.devfs_ruleset*, %struct.devfs_mount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
